--- a/windows-app/windows-app/windows-app/windows-app.csproj
+++ b/windows-app/windows-app/windows-app/windows-app.csproj
@@ -84,6 +84,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="data_collection\CurrentWindow.cs" />
+    <Compile Include="data_collection\CurrentWindowCollector.cs" />
+    <Compile Include="data_collection\ITimeSliceConsumer.cs" />
+    <Compile Include="data_collection\SummarizedConsumer.cs" />
+    <Compile Include="data_collection\TimeSliceInfo.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
