Synchronization with web service.

--- a/windows-app/windows-app/windows-app/windows-app.csproj
+++ b/windows-app/windows-app/windows-app/windows-app.csproj
@@ -76,6 +76,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="data_collection\CollectionConfiguration.cs" />
     <Compile Include="data_collection\TimeSliceUploader.cs" />
     <Compile Include="util\TimeFormatter.cs" />
     <Page Include="MainWindow.xaml">
