--- a/windows-app/windows-app/windows-app/windows-app.csproj
+++ b/windows-app/windows-app/windows-app/windows-app.csproj
@@ -78,6 +78,9 @@
     </ApplicationDefinition>
     <Compile Include="data_collection\CollectionConfiguration.cs" />
     <Compile Include="data_collection\TimeSliceUploader.cs" />
+    <Compile Include="SubmitEmoji.xaml.cs">
+      <DependentUpon>SubmitEmoji.xaml</DependentUpon>
+    </Compile>
     <Compile Include="util\TimeFormatter.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -96,6 +99,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="SubmitEmoji.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -124,7 +131,13 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="break.png" />
+    <Resource Include="icons\break.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="icons\web.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="icons\smiley.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
