--- a/.gitignore
+++ b/.gitignore
@@ -259,7 +259,9 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+
 web-app/venv/*
 *.idea*
 *db.sqlite*
 *__pycache__*
+*media*
