Added logo and updated windows app.

--- a/windows-app/windows-app/windows-app/windows-app.csproj
+++ b/windows-app/windows-app/windows-app/windows-app.csproj
@@ -149,5 +149,8 @@
   <ItemGroup>
     <Resource Include="icons\smiley.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="comment.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
